# ConstructionDevisPro

./: .gitignore  .replit  README.md  app.py  init_db.py  pyproject.toml  replit.md  requirements.txt
.jules/: bolt.md  palette.md
algorithms/: __init__.py  measurements.py  pricing.py
attached_assets/: Pasted-App-de-devis-construction-r-novation-LIVRABLE-1-Sp-cifi_1769026866638.txt
docs/: DevisPro_Architecture_Technique.md  DevisPro_Guide_Installation.md  DevisPro_Guide_Utilisateur.md  DevisPro_Modele_Economique.md  architecture_technique.md  features_full_list.md  fonctionnalites_detaillees.md  guide_utilisateur.md  modele_economique.md
lang/: en.json  fr.json
models/: __init__.py  base.py  bpu.py  company.py  project.py  question.py  quote.py  user.py
routes/: __init__.py  admin.py  api.py  auth.py  bpu.py  main.py  onboarding.py  projects.py  quotes.py
scripts/: enrich_questions.py  seed_data.py
security/: __init__.py  audit.py  decorators.py
services/: __init__.py  bpu_service.py  export_service.py  i18n_service.py  plan_reader.py  quote_generator.py
static/css/: main.css
static/js/: base.js  theme.js
templates/: base.html  dashboard.html  index.html
templates/admin/: audit_log.html  index.html  settings.html  user_form.html
templates/auth/: login.html  register.html
templates/bpu/: categories.html  custom.html  custom_form.html  index.html
templates/onboarding/: bpu.html  branding.html  complete.html  (+3 more)
tests/: test_i18n.py  test_scope.py
utils/: __init__.py  formatters.py  validators.py
verification/: verify_landing_redirect.py
(+18 files in other folders)
