[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.9",
    "werkzeug>=3.1.5",
]
